* Tue Aug 09 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.2-0
- Fixed dependency cycle between autofs and stunnel with an ugly exec.

* Mon Mar 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Fixed template variable reference typos

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-8
- Added compliance function support

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-7
- migration to simplib and simpcat (lib/ only)

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-6
- Changed puppet-server requirement to puppet

* Fri Sep 19 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-5
- Updated to be compatible with RHEL7

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-4
- Removed MD5 file checksums for FIPS compliance.

* Tue May 06 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-3
- If nfs is using stunnel, then have a restart of stunnel trigger a
  restart of autofs in an attempt to have consistency when
  transitioning into an stunnel setup.

* Mon Apr 21 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Updated ldap_bind_dn and ldap_bind_pw to use hiera settings instead.

* Thu Feb 27 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-1
- Added reasonable defaults for user and secret in ldap_auth.pp

* Mon Dec 16 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-0
- Updated the code to work with Puppet 3 and Hiera.
- Integrated the full Puppet spec test suite.

* Thu Oct 03 2013 Kendall Moore <kmoore@keywcorp.com> - 2.0.0-10
- Updated all erb templates to properly scope variables.

* Thu Jan 31 2013 Maintenance
2.0.0-9
- Created a Cucumber test that mounts a test folder in a different location to see if module is working properly.

* Thu Aug 02 2012 Maintenance
2.0.0-8
- Updated the autofs::map::entry to be able to handle entries with '/' in them.

* Wed Apr 11 2012 Maintenance
2.0.0-7
- Moved mit-tests to /usr/share/simp...